Add server ports, And some world_simulation codes

--- a/world-simulator/src/main/resources/application.properties
+++ b/world-simulator/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=world-simulator
+server.port=8083
+spring.kafka.bootstrap-servers= localhost:9092
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.topic.name=TargetPointPosition
+target.speed=0.001
+target.heading=360
+target.initial.position.X = -1
+target.initial.position.Y = 5
