Add some world-simulator code. Add consume function to sensor-control, the consume func doesn't working.

--- a/sensor-control/src/main/resources/application.properties
+++ b/sensor-control/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.application.name=sensor-control
-server.port=8082
+server.port=8085
+spring.kafka.bootstrap-servers= localhost:9092
+spring.kafka.consumer.group-id=Tower-1
+
+spring.kafka.consumer.auto-offset-reset=latest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.properties.spring.json.trusted.packages=*
+spring.kafka.topic.consume.name=TargetPointPosition2
+spring.kafka.topic.produce.position.name=TowerPosition
+spring.kafka.topic.produce.position.info.name=TargetBearingPosition
