--- a/sensor-control/src/main/resources/application.properties
+++ b/sensor-control/src/main/resources/application.properties
@@ -1,12 +1,23 @@
-spring.application.name=sensor-control
-server.port=8085
-spring.kafka.bootstrap-servers= localhost:9092
-spring.kafka.consumer.group-id=Tower-1
+spring.application.name = sensor-control
+server.port = 8085
+spring.kafka.bootstrap-servers = localhost:9092
 
+spring.kafka.consumer.group-id.tower-1 = Tower-1
+spring.kafka.consumer.group-id.tower-2 = Tower-2
+SensorTower1.Position.X = -5
+SensorTower1.Position.Y = 1
+SensorTower2.Position.X = 5
+SensorTower2.Position.Y = -1
 spring.kafka.consumer.auto-offset-reset=latest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+spring.kafka.consumer.key-deserializer  = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
+
 spring.kafka.properties.spring.json.trusted.packages=*
 spring.kafka.topic.consume.name=TargetPointPosition3
+
+#Produce:
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.topic.produce.position.name=TowerPosition
 spring.kafka.topic.produce.position.info.name=TargetBearingPosition
