--- a/sensor-control/src/main/resources/application.properties
+++ b/sensor-control/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.kafka.bootstrap-servers = localhost:9092
 
 spring.kafka.consumer.group-id.tower-1 = Tower-1
 spring.kafka.consumer.group-id.tower-2 = Tower-2
+# Names must be unique
+SensorTower1.name=tower1
+SensorTower2.name=tower2
 SensorTower1.Position.X = -5
 SensorTower1.Position.Y = 1
 SensorTower2.Position.X = 5
@@ -14,7 +17,7 @@ spring.kafka.consumer.key-deserializer  = org.apache.kafka.common.serialization.
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 
 spring.kafka.properties.spring.json.trusted.packages=*
-spring.kafka.topic.consume.name=TargetPointPosition3
+spring.kafka.topic.consume.name=TargetPointPosition
 
 #Produce:
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
