Write central-unit application.

--- a/central-unit/src/main/resources/application.properties
+++ b/central-unit/src/main/resources/application.properties
@@ -1,2 +1,24 @@
 spring.application.name=central-unit
 server.port=8081
+server.shutdown=immediate
+spring.kafka.bootstrap-servers = localhost:9092
+
+spring.kafka.consumer.key-deserializer  = org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.properties.spring.json.trusted.packages=*
+
+#produce
+spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.topic.produce.position.name=TargetPointPosition
+
+CentralUnit.name=central
+SensorTower1.name=tower1
+SensorTower2.name=tower2
+
+spring.kafka.consumer.group-id.CentralUnit.name=central1
+spring.kafka.topic.consume.towerPosition.name=TowerPosition
+spring.kafka.topic.consume.bearingInfo.name=TargetBearingPosition
+spring.lifecycle.timeout-per-shutdown-phase=50ms
+logging.level.org.apache.kafka=warn
+logging.level.org.springframework.kafka=warn
