Fix offset reset issue. Make sure central doesn't listen

--- a/sensor-control/src/main/resources/application.properties
+++ b/sensor-control/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.kafka.bootstrap-servers = localhost:9092
 spring.kafka.consumer.group-id.tower-1 = Tower-1
 spring.kafka.consumer.group-id.tower-2 = Tower-2
 # Names must be unique
+CentralUnit.name=central
 SensorTower1.name=tower1
 SensorTower2.name=tower2
 SensorTower1.Position.X = -5
 SensorTower1.Position.Y = 1
 SensorTower2.Position.X = 5
 SensorTower2.Position.Y = -1
-spring.kafka.consumer.auto-offset-reset=latest
 
 spring.kafka.consumer.key-deserializer  = org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
